FIX: overflow body

--- a/src/components/login/index.css
+++ b/src/components/login/index.css
@@ -1,5 +1,4 @@
 body {
-	overflow: hidden;
 	background-color: rgb(16, 113, 184);
 }
 
